2008-07-19  Jim Evins  <evins@snaught.com>

	* configure.in:
	* src/mygal/Makefile.am:
		Make sure libtool handles library dependencies for mygal
		properly.
	
2008-05-21  Jim Evins  <evins@snaught.com>

	* src/glabels-batch.c: (main):
		Bug #1968653.  Initialize prefs subsystem.

2008-05-09  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Bug #1959135.  A couple of radio buttons somehow became
		ungrouped.

2008-04-07  Jim Evins  <evins@snaught.com>

	* src/wdgt-rotate-label.h:
	* src/wdgt-rotate-label.c: (gl_wdgt_rotate_label_init),
	(gl_wdgt_rotate_label_new), (toggled_cb), (create_pixbuf),
	(gl_wdgt_rotate_label_get_state), (gl_wdgt_rotate_label_set_state),
	(gl_wdgt_rotate_label_set_template_name):
		Modified wdgt-rotate-label to better indicate the rotation choices.
	* data/glade/Makefile.am:
	* data/glade/wdgt-rotate-label.glade:
		Deleted wdgt-rotate-label.glade.

2008-04-04  Jim Evins  <evins@snaught.com>

	* data/templates/brother-other-templates.xml:
		Added categories to existing templates.
	* data/templates/misc-other-templates.xml:
		Moved dymo templates to their own file.
	* data/templates/Makefile.am:
	* data/templates/dymo-other-templates.xml:
		Additional dymo templates provided by Harald Welte <laforge@gnumonks.org>.
	* AUTHORS:
		Acknowledgement for above templates.

2008-03-24  Jim Evins  <evins@snaught.com>

	* src/xml-label.c: (xml_doc_to_label):
		Bug #1872584.  Don't refuse to parse label file if namespace is
		unrecognized -- it may be from a newer version of glabels.
	
2008-03-15  Jim Evins  <evins@snaught.com>

	* data/templates/Makefile.am:
	* data/templates/brother-other-templates.xml:
		Added brother templates.
	* src/cairo-markup-path.c: (gl_cairo_markup_margin_rect_path),
	(gl_cairo_markup_margin_cd_path):
	* src/view.c: (draw_markup_layer):
		Fixed markup drawing errors when label is rotated.

2008-03-03  Jim Evins  <evins@snaught.com>

	* configure.in:
	* ko.po: