@@ -1,3 +1,9 @@
+2008-07-25  Jim Evins  <evins@snaught.com>
+
+	* src/object-editor-size-page.c: (size_reset_cb),
+	(gl_object_editor_set_max_size):
+		Bug #1993550.  Set size limits based on longest side of label.
+
 2008-07-19  Jim Evins  <evins@snaught.com>
 
 	* configure.in:
